--- a/html/popup.html
+++ b/html/popup.html
@@ -27,6 +27,63 @@
                 <li><a>Words</a></li>
             </ul>
         </div>
+        <div class="columns">
+
+        </div>
+        <article class="message is-primary">
+            <div class="message-body">
+                <b>
+                    &nbsp;&nbsp;&nbsp;titles containing digits: 5/10
+                </b>
+            </div>
+        </article>
+        <div class="columns is-mobile mb-4 mr-3">
+            <div class="column is-two-fifths">
+                <b>words</b>
+            </div>
+            <div class="column">
+                <b>count</b>
+            </div>
+        </div>
+        <div class="columns is-mobile mb-4 mr-3">
+            <div class="column is-two-fifths">microsoft</div>
+            <div class="column">
+                <div class="level">
+                    <div class="level-left">
+                        <div class="level-item">18</div>
+                    </div>
+                    <div class="level-right">
+                        <div class="level-item">
+                            <progress value="18" max="18"></progress>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="columns is-mobile mb-4 mr-3">
+            <div class="column is-three-fifths">excel</div>
+            <div class="column">
+                <span>16&nbsp;&nbsp;&nbsp;</span>
+                <progress value="16" max="18"></progress>
+            </div>
+        </div>
+        <div class="columns is-mobile mb-4 mr-3">
+            <div class="column is-two-fifths">responding</div>
+            <div class="column">
+                <div class="columns is-mobile">
+                    <div class="column is-one-fifths">14</div>
+                    <div class="column">
+                        <progress value="14" max="18"></progress>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <!-- <div class="tabs is-small is-centered is-boxed pr-5">
+            <ul>
+                <li class="is-active"><a>Phrases</a></li>
+                <li><a>Words</a></li>
+            </ul>
+        </div>
         <div class="columns is-mobile mb-4 mr-3">
             <div class="column is-three-fifths">
                 <b>phrases</b>
