fixed tab and table style

--- a/html/popup.html
+++ b/html/popup.html
@@ -14,7 +14,7 @@
             <a class="navbar-brand"><img src="../images/banner.png" alt="banner" /></a>
             <ul class="navbar-nav mb-2">
                 <li class="nav-item">
-                    <button id="btn" type="button" class="btn btn-dark">Refresh</button>
+                    <button id="btn" type="button" class="btn btn-dark btn-sm">Refresh</button>
                 </li>
             </ul>
         </div>
