fixed form and rearranged code

--- a/html/popup.html
+++ b/html/popup.html
@@ -19,53 +19,7 @@
             </ul>
         </div>
     </nav>
-    <div id="target" class="container">
-        <form class="row g-3 needs-validation" id="words-form" novalidate>
-            <div class="col-6">
-                <label for="amount-words" class="form-label">Maximum outputs</label>
-                <input type="number" class="form-control form-control-sm" id="amount-words" value="10" required>
-                <div class="valid-feedback">
-                    Applied!
-                </div>
-                <div class="invalid-feedback">
-                    Please choose an integer greater than 1.
-                </div>
-            </div>
-            <div class="col-6">
-                <label for="rmin-words" class="form-label">Minimum occurances</label>
-                <input type="number" class="form-control form-control-sm" id="rmin-words" value="2" required>
-                <div class="valid-feedback">
-                    Applied!
-                </div>
-                <div class="invalid-feedback">
-                    Please choose an integer greater than 1.
-                </div>
-            </div>
-            <div class="col-6">
-                <label for="dmin" class="form-label">Minimum words in a phrase</label>
-                <input type="number" class="form-control form-control-sm" id="dmin" value="3" required>
-                <div class="valid-feedback">
-                    Applied!
-                </div>
-                <div class="invalid-feedback">
-                    Please choose an integer greater than 1.
-                </div>
-            </div>
-            <div class="col-6">
-                <label for="dmax" class="form-label">Maximum words in a phrase</label>
-                <input type="number" class="form-control form-control-sm" id="dmax" value="10" required>
-                <div class="valid-feedback">
-                    Applied!
-                </div>
-                <div class="invalid-feedback">
-                    Please choose an integer greater than 1.
-                </div>
-            </div>
-            <div class="col-12">
-                <button class="btn btn-sm" type="submit">Apply</button>
-            </div>
-        </form>
-    </div>
+    <div id="target" class="container"></div>
     <script src="../scripts/bootstrap.min.js"></script>
     <script src="../scripts/variables.js"></script>
     <script src="../scripts/calculation.js"></script>
